slice/src/components/pager/pager.scss
.pager {
  
  a {
    font-weight: bold;
    color: $color-gray-2;
  }

  &__items {
    padding: 0;
    margin: 0;
    text-align: left;
    display: flex;
    justify-content: center;
    align-items: center;
  }

  &__item {
    font-family: $Roboto-Italic;
    padding: 0;
    list-style: none;
    margin: 0;

    &.is-active, &:hover {

      a {
        color: $color-blue-3;
      }
    }

    &--previous, &--next, &--first, &--last {
      list-style: none;
      display: flex;
      align-items: center;
      justify-content: center;

      a {
        display: flex;
        align-items: center;
        justify-content: center;

        &:before, &:after {
          content: '';
          display: block;
          width: 9px;
          height: 9px;
          border: 2px solid $color-gray-2;
          border-top: none;
          border-right: none;
          transform: rotate(45deg);
          transition: border .3s;
        }

        &:after {
          margin-left: -2px;
        }

        &:focus,
        &:focus-visible,
        &:focus-within {
          &:before, &:after {
            border-color: $color-white;
          }
        }

        &:hover {

          &:before, &:after {
            border-color: $color-blue-3;
          }
        }
      }

      span {
        @include text-hide();
      }

    }

    &--previous, &--next {

      a:after {
        display: none;
      }
    }
    
    &--first, &--previous{
      a {
        padding-left: 4px;
      }
    }

    &--next, &--last {

      a {
        padding-right: 4px;
        &:before, &:after {
          transform: rotate(225deg);
        }
      }
    }

    a {
      text-decoration: none;
      display: flex;
      align-items: center;
      justify-content: center;

      height: 24px;
      width: 24px;

      span {
        transition: all .3s;
      }

      &focus,
      &:focus-visible,
      &:focus-within {
        color: $color-white;
      }
    }
  }
}

